# baleen

./: .gitignore  CMakeLists.txt  README.md
include/: baleen_utils.h  brilbasicblock.h  brilfunction.h  brilobject.h  brilop.h  brilprimitive.h  brilprogram.h  briltype.h  lvn.h  stringtable.h
src/: baleen_utils.cpp  brilbasicblock.cpp  brilfunction.cpp  brilobject.cpp  brilop.cpp  brilopt.cpp  brilprimitive.cpp  brilprogram.cpp  briltype.cpp  lvn.cpp  stringtable.cpp
tests/: stringtable_tester.cpp  test_runner.cpp
tests/bril/: assoc2_cse.json  b2a  b2j  b2t  bv  call.json  dead_call.json  dead_def.json  dead_func.json  dead_jmp.json  dead_nested_call.json  func_cse.json  multiblock_constant_propogation.json  ptr.json  redef_cse.json  unused_func_result.json  unused_nested_vars.json  unused_vars.json
